--- a/0CssHW/bs.css
+++ b/0CssHW/bs.css
@@ -13,10 +13,11 @@
 }
 .header-wrap{
     display: flex;
-    height: 75vh;
+    height: 90vh;
     flex-direction: column;
     justify-content: space-between;
     background-image: url(https://static.wixstatic.com/media/5a71f2_3726256a5da840e8b1df0e988639bc67~mv2_d_2800_1573_s_2.jpg/v1/fill/w_1901,h_710,al_c,q_85,usm_0.66_1.00_0.01/5a71f2_3726256a5da840e8b1df0e988639bc67~mv2_d_2800_1573_s_2.webp);
+    background-size: cover;
 }
 
 .header,.slogan,.header-btn,.info,.subtitle p,.footer .wrap{
@@ -66,7 +67,9 @@
     font-size: 30px;
     text-align: center;
     line-height: 3em;
-    padding-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .slogan p:first-child{
     font-size: 100px;
@@ -195,9 +198,10 @@
     text-align: left;
 }
 .card-group .card-pic{
-    height: 200px;
+    height: 180px;
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;  
+    justify-content: stretch;  
 }
 .card-group .card-pic img{
     margin: 10px auto;
@@ -229,6 +233,12 @@
 }
 .footer .media a{
     margin: 0 5px;
+}
+.footer .media a i{
+    color: blue;
+}
+.footer .media a:last-child i{
+    color: red;
 }
 .footer .law{
     color: black;
